# bellman

./: .coveragerc  .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  extrapylint  mypy.ini  poetry.toml  pylintrc  pyproject.toml  requirements.txt  setup.py  test_requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  doc_issue.md  feature_request.md
.github/workflows/: build-and-test.yml  publish-docs.yml  slow-tests.yml  upload-pypi.yaml
bellman/: __init__.py
bellman/agents/: __init__.py  components.py  model_based_agent.py
bellman/agents/background_planning/: __init__.py  background_planning_agent.py  model_free_agent_types.py
bellman/agents/decision_time_planning/: __init__.py  decision_time_planning_agent.py
bellman/agents/mbpo/: mbpo_agent.py
bellman/agents/mepo/: mepo_agent.py
bellman/agents/pets/: pets_agent.py
bellman/agents/trpo/: trpo_agent.py  utils.py
bellman/benchmark/: __init__.py
bellman/benchmark/mbpo/: train_eval.py
bellman/benchmark/mepo/: train_eval.py
bellman/benchmark/pets/: train_eval.py
bellman/benchmark/trpo/: train_eval.py
bellman/distributions/: __init__.py  utils.py
bellman/drivers/: __init__.py  tf_driver.py
bellman/environments/: __init__.py  environment_model.py  initial_state_distribution_model.py  mixins.py  reward_model.py  termination_model.py  tf_wrappers.py  utils.py
bellman/environments/transition_model/: __init__.py  observation_transformation.py  transition_model.py  utils.py
bellman/harness/: __init__.py  harness.py  utils.py
bellman/networks/: __init__.py  cast_layer.py
bellman/policies/: __init__.py  cross_entropy_method_policy.py  planning_policy.py
bellman/training/: __init__.py  agent_trainer.py  background_planning_agent_trainer.py  decision_time_planning_agent_trainer.py  model_free_agent_trainer.py  schedule.py  utils.py
bellman/trajectory_optimisers/: __init__.py  cross_entropy_method.py  particles.py  random_shooting.py  trajectory_optimisers.py  trajectory_optimization_types.py
docs/: README.md  conf.py  docs_requirements.txt  index.rst
docs/_static/: color_theme.css
docs/_templates/: custom-module-template.rst
docs/notebooks/: README.md  approximate_mdps.py  model_visualisation.py  trajectory_optimisation.py
examples/agents/ddpg/: run_ddpg.py
examples/agents/mbpo/: agent.gin  experiment.gin  run_mbpo.py
examples/environments/: mountain_car_continuous.gin  mountain_car_continuous_models.gin
examples/utils/: classic_control.py  mountain_car.py  open_loop.py  pendulum.py  policies.py  py_environment.py  trajectories.py
tests/: conftest.py
tests/unit/: conftest.py
(+95 files in other folders)
